# SDL_PROJECT

./: CMakeLists.txt
include/: Game.h
src/: Game.cpp  main.cpp
